# chanpy

./: .gitignore  README.md  pyproject.toml
config/: base.toml  local.toml
scripts/: deploy.sh  run_local.sh  setup.sh
src/chanpy/: main.py
src/chanpy/api/: __init__.py  error_handlers.py  routes.py
src/chanpy/api/data/: __init__.py  routes.py
src/chanpy/api/health/: __init__.py  routes.py
src/chanpy/api/strategy/: __init__.py  routes.py
src/chanpy/data_fetcher/: __init__.py  akshare_adapter.py
src/chanpy/utils/: __inti__.py  config.py  exceptions.py  logger.py
